Fixed loader screen alignment

--- a/wp-content/themes/mk-group/src/app/sectors/sectors.component.css
+++ b/wp-content/themes/mk-group/src/app/sectors/sectors.component.css
@@ -177,6 +177,7 @@ section.sectors > .row .columns {
     -ms-transition: all 300ms;
     -o-transition: all 300ms;
     transition: all 300ms;
+    bottom: 0;
 }
 .sector:hover .image-layer {
     -webkit-transform: translateY(0);
